analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/objectWithTypeArgsAsExpression.kt
private val commonSettingsLazy = <expr>object A<LanguageVersionSettings> {
   println(x)
}</expr>
